--- a/views/instaSurvey.html
+++ b/views/instaSurvey.html
@@ -36,11 +36,11 @@
       <h2> How satisfied are you with the recommended content you see in Instagram (1 = Very unsatisfied & 5 = Very satisfied)? </h2>
       <select name="q4">
         <option value="rating0"> </option>
-        <option value="rating1">1</option>
-        <option value="rating2">2</option>
-        <option value="rating3">3</option>
-        <option value="rating4">4</option>
-        <option value="rating5">5</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
       </select>
       <br>
       <br>
