--- a/views/showResults.ejs
+++ b/views/showResults.ejs
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h1>Survey Analysis</h1>
+    <h1>Instagram Survey Analysis By Group 46</h1>
     <h2>What is your overall experience with the Instagram site, in detail?</h2>
     <ul>
     <% for (var i=0; i<results[0].length; i++){ %>
