--- a/views/instaSurvey.html
+++ b/views/instaSurvey.html
@@ -13,7 +13,7 @@
 
     <style>
       .custom-background {
-        background-image: url('/views/bgimage.jpg');
+        background-image: url('/images/bgimage.jpg');
         background-size: cover;
         background-repeat: no-repeat;
       }
